welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.error
withoutDoubles:3: error: value || is not a member of Int
		case (a,b,c) if (noDoubles==true && die1==die2) => die1+1 || die2+1
                                                                          ^